--- a/index.html
+++ b/index.html
@@ -37,42 +37,28 @@
             </div>
         </div>
     </nav>
-<section id="about-section" class="pt-5 pb-5">
-    <div class="container wrapabout">
-        <div class="red"></div>
-            <div class="row">
-                <div class="col-lg-6 align-items-center justify-content-left d-flex mb-5 mb-lg-0">
-                    <div class="blockabout">
-                        <div class="blockabout-inner text-center text-sm-start">
-                            <div class="title-big pb-3 mb-3">
-                                <h3>ABOUT ME</h3>
-                            </div>
-                            <p id="profile" class="description-p text-muted pe-0 pe-lg-0">
-                                Вітаю усіх на моєму сайті. Я студент Херсонського державного університету Данило, та вчусь на IT спеціальності. WEB-Програмування це мій подальший напрямок у цій галузі, і 
-                                тому я хочу представити вам свої навички у цій сфері.
-                            </p>
-                            <p class="description-p text-muted pe-0 pe-lg-0">Починалось усе з звичайного html, були спроби створити звичайну сторінку з примітивним текстом, і далі я продовжив поглибленно
-                                вивчати front-end гілку у WEB-Програмуванні. Фреймворки CSS це одна з тем яка мене дуже захоплює, адже паралельно цій дисципліні я вивчав стилізацію сайтів та натрапив на 
-                                популярний фреймворк CSS під назвою Bootstrap, який дозволяє стилізувати сторінки на будь-який смак з безліччю параметрів налаштування. 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mt-5 mt-lg-0">
-                    <figure class="potoaboutwrap">
-                        <img src="css/img/photo_2022-09-17_08-45-41.jpg" alt="potoabout" />
-                    </figure>
-                </div>
-            </div>
-        </div>
+    <section id="about-section" class="header_text">
+      <div class="container">
+        <h1 class="header_title">Микитас Данило</h1>
+        <p class="header_subtitle">3d Designer and front-end developer</p>
+      </div>
     </section>
-
+    <section id="about-section" class="about">
+      <div class="container about_container">
+        <div class="about_info">
+          <h2 class="about_title">About me</h2>
+          <div class="about_text">I love 3D modeling and website layout. I would do this every day. My skills are growing every day</div>
+        </div>
+        <div class="about_gallery">
+          <div class="about_img"> <img src="css/img/photo_2022-09-17_08-45-41.jpg" alt=""> </div>
+        </div>
+      </div>
+    </section>
 <section id="skills" class="bg-light py-5 py-xl-6">
   <div class="container mb-5 mb-md-6">
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6 text-center">
         <h2 class="mb-4 display-5">Skills</h2>
-        <p class="text-secondary mb-4 mb-md-5">Далі хочу представити прогресс у напрямках, які я вибрав як основні у своємо майбутньому</p>
         <hr class="w-50 mx-auto mb-0 text-secondary">
       </div>
     </div>
@@ -83,7 +69,6 @@
       <div class="col-12 col-sm-6 col-xl-5">
         <div class="bg-white rounded shadow-sm p-3 p-md-4 p-xxl-5">
           <h3 class="fw-bold mb-2">Bootstrap</h3>
-          <p class="text-secondary fst-italic mb-4">Дуже популярний та зрозумілий фреймворк CSS, можу стилізувати невеликі сайти</p>
           <div class="progress">
             <div class="progress-bar w-85 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Bootstrap" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
           </div>
@@ -92,7 +77,6 @@
       <div class="col-12 col-sm-6 col-xl-5">
         <div class="bg-white rounded shadow-sm p-3 p-md-4 p-xxl-5">
           <h3 class="fw-bold mb-2">3Ds Max</h3>
-          <p class="text-secondary fst-italic mb-4">Так як я позіцоную себе як фронт енд розробник та 3д дизайнер. Можу працювати над фігурами любих типів</p>
           <div class="progress">
             <div class="progress-bar w-75 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="React" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
           </div>
@@ -101,7 +85,6 @@
       <div class="col-12 col-sm-6 col-xl-5">
         <div class="bg-white rounded shadow-sm p-3 p-md-4 p-xxl-5">
           <h3 class="fw-bold mb-2">WordPress</h3>
-          <p class="text-secondary fst-italic mb-4">Дуже класний CMS як для початку, можна створити будь-який шаблон. Можу створювати шаблони невеликі</p>
           <div class="progress">
             <div class="progress-bar w-65 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Vue" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
           </div>
@@ -110,7 +93,6 @@
       <div class="col-12 col-sm-6 col-xl-5">
         <div class="bg-white rounded shadow-sm p-3 p-md-4 p-xxl-5">
           <h3 class="fw-bold mb-2">HTML CSS</h3>
-          <p class="text-secondary fst-italic mb-4">Кожний день вивчаю щось нове з обох цих тем, але усе ще попереду</p>
           <div class="progress">
             <div class="progress-bar w-95 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="WordPress" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">15%</div>
           </div>
